--- a/default.hbs
+++ b/default.hbs
@@ -81,7 +81,7 @@
             <nav class="site-footer-nav">
                 {{navigation type="secondary"}}
             </nav>
-            <div><a href="https://ghost.org/" target="_blank" rel="noopener">Powered by Ghost</a></div>
+            <div><a href="https://ghost.org/" target="_blank" rel="noopener">Running on Ghost</a></div>
         </div>
     </footer>
 
