--- a/post.hbs
+++ b/post.hbs
@@ -83,10 +83,10 @@ into the {body} tag of the default.hbs template --}}
 </main>
 
 {{!-- A signup call to action is displayed here, unless viewed as a logged-in member --}}
-{{!--
+
 {{#match @custom.email_signup_for_logged_out_visitors "!=" "None"}}
 {{#unless @member}}{{#if access}}
-    <section class="footer-cta {{#match @custom.email_signup_for_logged_out_visitors "Bottom of post"}}cta-alt{{/match}}">
+    <!--<section class="footer-cta {{#match @custom.email_signup_for_logged_out_visitors "Bottom of post"}}cta-alt{{/match}}">
         <div class="inner">
             {{#if @custom.email_signup_text}}<h2>{{@custom.email_signup_text}}</h2>{{/if}}
             <a class="footer-cta-button" href="#/portal" data-portal>
@@ -96,10 +96,10 @@ into the {body} tag of the default.hbs template --}}
             {{!-- ^ This looks like a form element, but it's just a link to Portal,
             making the form validation and submission much simpler. --}}
         </div>
-    </section>
+    </section>-->
 {{/if}}{{/unless}}
 {{/match}}
---}}
+
 
 {{!-- Read more links, just above the footer --}}
 {{#if @custom.show_recent_posts}}
