Add homepage image

--- a/index.hbs
+++ b/index.hbs
@@ -23,6 +23,7 @@ into the {body} of the default.hbs template --}}
             {{else}}
                 {{@site.title}}
             {{/if}}
+            <img src="/assets/img/washer-wedding-square.png"/>
         </h1>
         <p>{{@site.description}}</p>
     </div>
