--- a/index.hbs
+++ b/index.hbs
@@ -3,15 +3,15 @@
 into the {body} of the default.hbs template --}}
 
 {{#match @custom.publication_cover_style "!=" "None"}}
-    <div class="site-header-content{{#match @custom.publication_cover_style "Large"}} xlarge{{/match}}">
+    <div class="site-header-content{{#match @custom.publication_cover_style "Large"}} large{{/match}}">
         {{#if @site.cover_image}}
             {{!-- This is a responsive image, it loads different sizes depending on device
             https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
             <img class="site-header-cover"
-                srcset="{{img_url @site.cover_image size="s"}} 300w,
-                        {{img_url @site.cover_image size="m"}} 600w,
-                        {{img_url @site.cover_image size="l"}} 1000w,
-                        {{img_url @site.cover_image size="xl"}} 2000w"
+                srcset="{{img_url @site.cover_image size="s"}} 600w,
+                        {{img_url @site.cover_image size="m"}} 1200w,
+                        {{img_url @site.cover_image size="l"}} 2000w,
+                        {{img_url @site.cover_image size="xl"}} 4000w"
                 sizes="100vw"
                 src="{{img_url @site.cover_image size="xl"}}"
                 alt=""
