--- a/index.hbs
+++ b/index.hbs
@@ -17,14 +17,14 @@ into the {body} of the default.hbs template --}}
                 alt=""
             />
         {{/if}}
-        <h1 class="site-title">
+        <!--<h1 class="site-title">
             {{#if @site.logo}}
                 <img class="site-logo" src="{{img_url @site.logo size="m"}}" alt="{{@site.title}}" />
             {{else}}
                 {{@site.title}}
             {{/if}}
         </h1>
-        <p>{{@site.description}}</p>
+        <p>{{@site.description}}</p>-->
     </div>
 {{/match}}
 
