Update the private login banner

--- a/private.hbs
+++ b/private.hbs
@@ -24,7 +24,8 @@
                         <div class="gh-flow-content-wrap">
                             <section class="gh-flow-content">
                                 <header>
-                                    <h1>Please enter the password from your invitation for access.</h1>
+                                    <h1>The Washer Wedding</h1>
+                                    <h2>Please enter the password from your invitation for access.</h2>
                                 </header>
                                 <form class="gh-signin" method="post" novalidate="novalidate">
                                     <div class="form-group{{#if error}} error{{/if}}">
