--- a/private.hbs
+++ b/private.hbs
@@ -16,30 +16,29 @@
 
         <link rel="stylesheet" href="{{asset "public/ghost.css" hasMinFile="true"}}"/>
     </head>
-    <body> 
+    <body>
         <div class="gh-app">
             <div class="gh-viewport">
                 <main class="gh-main" role="main">
                     <div class="gh-flow">
                         <div class="gh-flow-content-wrap">
-                            <section class="gh-flow-content">
+                            {{#if @site.icon}}
+                                <img class="site-icon" src="{{img_url @site.icon absolute="true"}}" alt="icon">
+                            {{/if}}
+                            <section class="gh-flow-content private">
                                 <header>
-                                    <h1>The Washer Wedding</h1>
+                                    <<h1>The Washer Wedding</h1>
                                     <h2>Please enter the password from your invitation for access.</h2>
                                 </header>
                                 <form class="gh-signin" method="post" novalidate="novalidate">
                                     <div class="form-group{{#if error}} error{{/if}}">
-                                        <span class="gh-input-icon gh-icon-lock">
-                                            <svg version="1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g><path d="M12 14c-.552 0-1 .449-1 1 0 .365.207.672.5.846v2.654c0 .276.224.5.5.5s.5-.224.5-.5v-2.654c.293-.174.5-.481.5-.846 0-.551-.448-1-1-1zM20.5 9h-2.5v-3c0-3.309-2.691-6-6-6s-6 2.691-6 6v3h-2.5c-.276 0-.5.224-.5.5v14c0 .276.224.5.5.5h17c.276 0 .5-.224.5-.5v-14c0-.276-.224-.5-.5-.5zm-13.5-3c0-2.757 2.243-5 5-5s5 2.243 5 5v3h-10v-3zm13 17h-16v-13h16v13z"/></g></svg>
-                                            {{input_password class="gh-input" style="padding-left:35px;" placeholder="Password"}}
-                                        </span>
+                                            {{input_password class="gh-input" placeholder="Password"}}
+                                            {{#if error}}
+                                                <p class="main-error">{{error.message}}</p>
+                                            {{/if}}
                                     </div>
-                                    <button class="gh-btn gh-btn-block" type="submit"><span>Enter Now</span></button>
+                                    <button class="gh-btn" type="submit"><span>Enter now &rarr;</span></button>
                                 </form>
-
-                                {{#if error}}
-                                    <p class="main-error">{{error.message}}</p>
-                                {{/if}}
                             </section>
                         </div>
                     </div>
