--- a/private.hbs
+++ b/private.hbs
@@ -22,12 +22,9 @@
                 <main class="gh-main" role="main">
                     <div class="gh-flow">
                         <div class="gh-flow-content-wrap">
-                            {{#if @site.icon}}
-                                <img class="site-icon" src="{{img_url @site.icon absolute="true"}}" alt="icon">
-                            {{/if}}
                             <section class="gh-flow-content private">
                                 <header>
-                                    <<h1>The Washer Wedding</h1>
+                                    <h1>The Washer Wedding</h1>
                                     <h2>Please enter the password from your invitation for access.</h2>
                                 </header>
                                 <form class="gh-signin" method="post" novalidate="novalidate">
